Fixes: Kmail Crashes when errors occure while sending mails

When a subjob fails just emitResult right after it ent exit the
function.

BUG: 328013
FIXED-IN: 4.11.5
REVIEW: 114081